openshift/gogs/gogs.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gogs-postgresql
  annotations:
    image.openshift.io/triggers: >-
        [{"from":{"kind":"ImageStreamTag","name":"postgresql:latest", "namespace":"openshift"},"fieldPath":"spec.template.spec.containers[?(@.name==\"postgresql\")].image"}]
  labels:
    app: gogs
    app.kubernetes.io/component: database
    app.kubernetes.io/instance: gogs
    app.kubernetes.io/name: gogs-postgresql
    app.kubernetes.io/part-of: gogs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gogs
      name: gogs-postgresql
  template:
    metadata:
      labels:
        app: gogs
        name: gogs-postgresql
    spec:
      containers:
      - name: postgresql
        imagePullPolicy: Always
        image: postgresql:latest
        ports:
        - containerPort: 5432
        livenessProbe:
          initialDelaySeconds: 30
          tcpSocket:
            port: 5432
          timeoutSeconds: 1
          failureThreshold: 10
          periodSeconds: 20
        readinessProbe:
          exec:
            command:
            - /bin/sh
            - -i
            - -c
            - psql -h 127.0.0.1 -U ${POSTGRESQL_USER} -q -d ${POSTGRESQL_DATABASE} -c 'SELECT 1'
        resources:
          limits:
            memory: 512Mi
        volumeMounts:
        - mountPath: /var/lib/pgsql/data
          name: gogs-postgres-data
      volumes:
      - name: gogs-postgres-data
        persistentVolumeClaim:
          claimName: gogs-postgres-data
---
kind: Service
apiVersion: v1
metadata:
  name: gogs-postgresql
  labels:
    app: gogs
spec:
  ports:
  - name: postgresql
    port: 5432
    targetPort: 5432
  selector:
    name: gogs-postgresql
    app: gogs
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gogs
  labels:
    app: gogs
    app.kubernetes.io/component: gogs
    app.kubernetes.io/instance: gogs
    app.kubernetes.io/name: gogs
    app.kubernetes.io/part-of: gogs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gogs
      name: gogs
  template:
    metadata:
      labels:
        app: gogs
        name: gogs
    spec:
      containers:
      - name: gogs
        imagePullPolicy: Always
        image: quay.io/siamaksade/gogs:stable
        ports:
        - containerPort: 3000
          protocol: TCP
        volumeMounts:
        - name: gogs-data
          mountPath: /opt/gogs/data
        - name: gogs-config
          mountPath: /etc/gogs/conf
        readinessProbe:
            httpGet:
              path: /
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 40
            timeoutSeconds: 1
            periodSeconds: 20
            successThreshold: 1
            failureThreshold: 10
        livenessProbe:
            httpGet:
              path: /
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 40
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 10
      volumes:
      - name: gogs-data
        persistentVolumeClaim:
          claimName: gogs-data
      - name: gogs-config
        configMap:
          name: gogs-config
          items:
            - key: app.ini
              path: app.ini
---
kind: Service
apiVersion: v1
metadata:
  labels:
    app: gogs
  name: gogs
spec:
  ports:
  - name: 3000-tcp
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: gogs
    name: gogs
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: gogs
  name: gogs
spec:
  port:
    targetPort: 3000-tcp
  tls:
    insecureEdgeTerminationPolicy: Allow
    termination: edge
  to:
    kind: Service
    name: gogs
    weight: 100
  wildcardPolicy: None
